--- a/vignettes/HilbertCurve.Rmd
+++ b/vignettes/HilbertCurve.Rmd
@@ -33,10 +33,10 @@ options(width = 100)
 that fold one dimensional axis into a two dimensional space, but with still keeping the locality.
 It has advantages to visualize data with long axis in following two aspects:
 
-1. greatly improve resolution for the visualization
-2. easy to visualization clusters because generally they will also be close in the Hilbert curve. 
+1. greatly improve resolution for the visualization;
+2. easy to visualize clusters because generally data points in the cluster will also be close in the Hilbert curve. 
 
-This package aims to provide a easy and flexible way to visualize data through Hilbert curve.
+This package aims to provide an easy and flexible way to visualize data through Hilbert curve.
 The implementation and example figures are based on following sources:
 
 - http://mkweb.bcgsc.ca/hilbert/
@@ -45,7 +45,6 @@ The implementation and example figures are based on following sources:
 
 ```{r}
 suppressPackageStartupMessages(library(HilbertCurve))
-library(HilbertVis)
 library(circlize)
 set.seed(123)
 ```
@@ -70,77 +69,138 @@ upViewport()
 upViewport()
 ```
 
-Following heatmap shows distance between elements in the Hilbert curve.
-Basically, if elements are close in the one dimensional axis, they also have small 
+Following heatmap shows distance between elements in the Hilbert curve. From left to right
+and from top to bottom, the order is the natural order of data points and colors correspond 
+to the distance for pair distance in the Hilbert curve.
+Basically, if data points are close in the one dimensional axis, they also have small 
 distance in the Hilbert curve (regions around diagonals)
 
 ```{r, fig.width = 7, echo = FALSE}
+library(HilbertVis)
 pos = HilbertVis::hilbertCurve(5)
 mat = as.matrix(dist(pos))
 library(ComplexHeatmap)
 
-Heatmap(mat, name = "euclidean_dist", cluster_rows = FALSE, cluster_columns = FALSE,
+Heatmap(mat, name = "dist", heatmap_legend_title = "euclidean_dist", cluster_rows = FALSE, cluster_columns = FALSE,
 	show_row_names = FALSE, show_column_names = FALSE)
-seekViewport("euclidean_dist_heatmap_body_1")
+seekViewport("dist_heatmap_body_1")
 grid.segments(c(0.25, 0.5, 0.75, 0, 0, 0), c(0, 0, 0, 0.25, 0.5, 0.75), 
 	c(0.25, 0.5, 0.75, 1, 1, 1), c(1, 1, 1, 0.25, 0.5, 0.75), gp = gpar(lty = 2))
 ```
 
-## Graphic settings
+## Basic settings
 
-`HilbertCurve()` is a constructor function and initializes the Hilbert curve. The start
-and end of the position are specified as well as the level of the Hilbert curve. The function
+Generally, customizing a Hilbert curve follows following steps:
+
+```{r, eval = FALSE}
+hc = HilbertCurve(...)
+hc_points(hc, ...)
+hc_rect(hc, ...)
+hc_segments(hc, ...)
+hc_text(hc, ...)
+```
+
+`HilbertCurve()` is a constructor function and initializes the Hilbert curve. Here the start
+and end position that correspond to the two ends of the Hilbert curve are specified 
+as well as the level of the Hilbert curve. The function
 returns a `HilbertCurve` class instance and it can be used to add more graphics later.
 
-When add graphics, the range of positions should be specified as a `IRanges` object.
+```{r, eval = FALSE}
+hc = HilbertCurve(1, 100, level = 4, reference = TRUE)
+```
 
-In following example, we add points for the regions. By default, a list of points are plotted
-if the region is long.
+The curve can be though as a folded axis. When the coordinate for this folded axis is
+initialized, low-level graphics can be added with specifying the positions.
+
+Before we demonstrate low-level functions, first we generate a random regions by **IRanges** package.
 
 ```{r}
-hc = HilbertCurve(1, 100, level = 4, reference = TRUE)
-hc
-
 x = sort(sample(100, 20))
 s = x[1:10*2 - 1]
 e = x[1:10*2]
 ir = IRanges(s, e)
+ir
+```
 
+### Points
+
+There are two modes for adding points. By default, every segment in the Hilbert curve are segmented
+into several small segments and a circle is plotted at every small segments.
+
+```{r}
+hc = HilbertCurve(1, 100, level = 4, reference = TRUE)
 hc_points(hc, ir)
 ```
 
-The number of 'points' in a segment can be controlled by `np` and graphical parameters 
+The number of circles in the small segment can be controlled by `np` and graphical parameters 
 can be set by `gp`. Note under this mode, the size of points can only be changed by `np` argument.
+This mode is useful if you have long regions.
 
 ```{r}
 hc = HilbertCurve(1, 100, level = 4, reference = TRUE)
 hc_points(hc, ir, np = 3, gp = gpar(fill = rand_color(length(ir))))
 ```
 
-If the position are not integers, you can set the positions by `x1` and `x2`. These
-two arguments also work for other grahical functions.
+Here such circles are not real points in R, they are polygons actually. There are some pre-defined shapes
+that you can choose from: "circle", "square", "triangle", "hexagon", "star".
 
-```{r, eval = FALSE}
+If `np` is set less than 2 or `NULL`, the points will be plotted at the center of every interval in `ir`.
+In this case, `size` argument is used to control the size of the points. This mode is useful
+if you have a lot of small regions.
+
+```{r}
 hc = HilbertCurve(1, 100, level = 4, reference = TRUE)
-hc_points(hc, x1 = c(10.5, 50.5), x2 = c(20.5, 60.5), np = 3, 
-	gp = gpar(fill = rand_color(length(ir))))
+hc_points(hc, ir, np = NULL, size = unit(runif(length(ir)), "cm"), pch = 16)
 ```
 
-Add segments:
+### Segments
+
+Adding segments is straightforward. 
 
 ```{r}
 hc = HilbertCurve(1, 100, level = 4, reference = TRUE)
 hc_segments(hc, ir)
 ```
 
-Add rectangles:
+### Rectangles
+
+Adding rectangles is straightforward. Note You cannot set the width or height of the rectangles. Rectangles are always located
+at the turning points and have width or height equal to the length of the segments.
 
 ```{r}
 hc = HilbertCurve(1, 100, level = 4, reference = TRUE)
 hc_rect(hc, ir)
 ```
 
-Add texts:
+As you can see some rectangles are not full red. It is because these segments in the curve do not
+full cover regions in `ir`, Averaging is applied in such segments. Actually it is also applicable
+for the 'segmented circle' mode for `hc_points`.
+
+Graphical values that correspond to `ir` are always represented as numeric values, such as size of points,
+width of lines or even colors which can be converted to numeric RGB values. If a segment in the Hilbert
+curve can not full overlap with some intervals in `ir`, these numeric parameters can be averaged.
+
+There are three different modes for averaging which are controlled by `mean_mode` argument.
+Following illustrates different settings for `mean_mode`:
+
+```
+      100     80    60     values in ir (e.g. red compoment for colors)
+    ++++++   +++   +++++   ir
+      ================     window (width = 16)
+       4      3     3      overlap
+
+    absolute: (100 + 80 + 60)/3
+    weighted: (100*4 + 80*3 + 60*3)/(4 + 3 + 3)
+    w0:       (100*4 + 80*3 + 60*3)/16
+```
+
+So use of the mode depends on specific scenario. For example, if `ir` corresponds to positions of genes,
+then the mode of `w0` is perhaps a good choise. If `ir` corresponds to positions of CpG sites which is
+has width of 1 and most of the time is sparse in genomic windows, then `absolute` is a correct choice.
+
+### Text
+
+Adding texts is straightforward. Note text is added at the center of each interval in `ir`.
 
 ```{r}
 hc = HilbertCurve(1, 100, level = 4, reference = TRUE)
@@ -148,47 +208,81 @@ labels = sample(letters, length(ir), replace = TRUE)
 hc_text(hc, ir, labels = labels)
 ```
 
+### Combine low-level functions
+
 With combination of these basic graphic functions, complicated graphics can be easily made:
 
 ```{r}
 hc = HilbertCurve(1, 100, level = 4)
-hc_segments(hc, IRanges(1, 100))
+hc_segments(hc, IRanges(1, 100))   # background line
 hc_rect(hc, ir)
 hc_points(hc, ir, np = 3)
 hc_text(hc, ir, labels = labels, gp = gpar(fontsize = 16, col = "blue"))
 ```
 
-## Add legend
+## Non-integer positions
 
-Legend can be passed to `legend` options in `HilbertCurve()` as a `grob` object or a list of `grob` objects.
-Because width and height are enforced to be equal for the Hilbert curve, you need to manually adjust the width
-and height for the whole figure to remove the empty regions around Hilbert curve.
+It doesn't matter if your positions are integers or not. Internally, rounding and zooming are applied
+to ensure the accuracy.
+
+Since the positions are not integers, you can specify the positions by `x1` and `x2`. All low-level graphical
+funtions accept `x1` and `x2`.
+
+```{r}
+hc = HilbertCurve(0.1, 0.8, level = 4, reference = TRUE)
+hc_points(hc, x1 = c(0.15, 0.55), x2 = c(0.25, 0.65))
+```
+
+## Add title and legends
+
+Title are allowed by setting `title` argument. 
+Legend can be passed to `legend` argument in `HilbertCurve()` as a `grob` object or a list of `grob` objects.
+`ColorMapping` class in **ComplexHeatmap** package or `legendGrob()` in **grid** package can be used to create
+a legend `grob`. Or you can consider to use `frameGrob()` and `packGrob()` to build a legend from ground.
+
+Because width and height are enforced to be equal for the Hilbert curve, sometimes you may see blank spaces around
+the curve.
 
 ```{r}
 value = runif(length(ir))
 col_fun = colorRamp2(c(0, 1), c("white", "red"))
-cm = ColorMapping(col_fun = col_fun, name = "value")
+cm = ColorMapping(col_fun = col_fun, legend_title = "value")
 legend = color_mapping_legend(cm, plot = FALSE)
-hc = HilbertCurve(1, 100, reference = TRUE, level = 4, legend = legend)
+hc = HilbertCurve(1, 100, reference = TRUE, title = "points", legend = legend)
 hc_points(hc, ir, np = 3, gp = gpar(fill = col_fun(value)))
 ```
 
 ## Pixel mode
 
-When the level of the Hilbert curve is high (e.g. 10), it is not a good idea to plot it in
-the normal way. Under the 'pixel' mode, .. will be mapped to one pixel and a PNG will be outputed
-with resolution of 2^n x 2^n.
+When the level is high (e.g. > 10), the whole 2D space will be almost completely filled by the curve and
+it is impossible to add or visualize e.g. points on the curve. In this case, the 'pixel'
+mode visualizes each tiny 'segment' as a pixel and maps values to colors. So the Hilbert
+curve with level 11 will generate a PNG figure with 2048x2048 resolution. This is extremely
+useful for visualize genomic data. E.g. If we make a Hilbert curve for human chromosome 1 with
+level 11, then each pixel can represent 60bp (``249250621/2048/2048``) which is of very high resolution.
 
-You can add more than one layers, just remember to set transparent colors.
+Under 'pixel' mode, if the current device is an interactive deivce, every time a new layer is added, 
+the image will be add to the interactive device as a rastered image. 
 
-```{r, echo = FALSE}
-knit_hooks$set(custom_plot = hook_plot_custom)
-```
-
-```{r, custom_plot = TRUE, fig.ext = 'png'}
+```{r}
 hc = HilbertCurve(1, 100, level = 9, mode = "pixel")
 hc_layer(hc, ir)
-hc_save(hc, file = fig_path('.png'))
+```
+
+Since you can only use color to map to other values, there is only one graphical setting `col`. 
+You can add more than one layers, just remember to set transparent colors. And of course you can add title and legend to the plot.
+Grid lines can be added to the plot for better distinguish blocks in the Hilbert curve.
+
+```{r}
+hc = HilbertCurve(1, 100, level = 9, mode = "pixel", title = "pixel mode", legend = legend)
+hc_layer(hc, ir, col = col_fun(value), grid_line = 2)
+hc_layer(hc, x1 = 40, x2 = 50, col = "#00000020")
+```
+
+The Hilbert curve can be save as PNG figure by `hc_png()`, with resolution `2^level x 2^level`.
+
+```{r, eval = FALSE}
+hc_png(hc, file = "test.png")
 ```
 
 ## Examples
@@ -202,7 +296,7 @@ ir = IRanges(start = 1:99, end = 2:100)
 hc_points(hc, ir, np = 4, gp = gpar(col = col, fill = col))
 ```
 
-Genes on chromosome 1 (RefSeq genes for human). Here random colors are used
+Genes on chromosome 1 (RefSeq genes for human, hg19). Here random colors are used
 to represent to different genes.
 
 ```{r}
@@ -254,7 +348,7 @@ GC percent on chromosome 1, under "pixel" mode:
 hc = HilbertCurve(1, chr1_len, level = 9, mode = "pixel")
 hc_layer(hc, IRanges(df[[2]], df[[3]]), col = col_fun(df[[5]]))
 hc_layer(hc, reduce(ranges(g)), col = "#00000020")
-hc_save(hc, file = "gc_percent_chr1.png")
+hc_png(hc, file = "gc_percent_chr1.png")
 ```
 
 <p><center><img src="gc_percent_chr1.png" /></center></p>
@@ -269,7 +363,7 @@ for(mark in c("H3K27ac", "H3K36me3", "H3K4me1", "H3K4me3", "H3K9me3")) {
 	col_fun = colorRamp2(c(0, quantile(df[[5]], 0.99)), c("white", "red"))
 	hc = HilbertCurve(1, chr1_len, level = 9, mode = "pixel")
 	hc_layer(hc, IRanges(df[[2]], df[[3]]), col = col_fun(df[[5]]))
-	hc_save(hc, file = qq("@{mark}_chr1.png"))
+	hc_png(hc, file = qq("@{mark}_chr1.png"))
 }
 ```
 
@@ -300,7 +394,7 @@ df = read.table(pipe("awk '$1==\"chr1\"' /icgc/dkfzlsdf/analysis/B080/guz/Hilber
 col_fun = colorRamp2(c(0, 0.5, 1), c("blue", "white", "red"))
 hc = HilbertCurve(1, chr1_len, level = 9, mode = "pixel")
 hc_layer(hc, IRanges(df[[2]], df[[3]]), col = col_fun(df[[5]]), mean_mode = "absolute")
-hc_save(hc, file = "methylation_chr1.png")
+hc_png(hc, file = "methylation_chr1.png")
 ```
 
 <p><center><img src="methylation_chr1.png" /></center></p>
