--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+CHANGES in VERSION 0.99.1
+
+* add dependency to base packages
+=========================================
+
 CHANGES in VERSION 0.99.0
 
 * new release
