minor changes on vignette
From: Zuguang Gu <jokergoo@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/HilbertCurve@107595 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,18 @@
+
+CHANGES in VERSION 0.99.2
+
+* jump to top viewport for each low-level functions
+
+========================================
+
 CHANGES in VERSION 0.99.1
 
 * add dependency to base packages
+
 =========================================
 
 CHANGES in VERSION 0.99.0
 
 * new release
+
 ==========================================
