increased version number

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+CHANGES in VERSION 0.99.3
+
+* transparency is also averaged
+
+========================================
 
 CHANGES in VERSION 0.99.2
 
